<resources>
    <string name="app_name">Weather</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="wind">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="temp">Temperature</string>
    <string name="date" translatable="false">Date</string>
    <string name="remove_city">Do you want to remove this city ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="action_add_city">Add a city</string>
    <string name="action_refresh">Refresh</string>
    <string name="refresh_done">Data updated</string>
    <string name="title_activity_city_view" translatable="false">CityView</string>
    <string name="title_activity_add_city" translatable="false">AddCityActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_update_setting">Update settings</string>
    <string name="minutes">Every 30 minutes</string>
    <string name="hour">Once an hour</string>
    <string name="day">Once a day</string>
    <string name="manual">Never (Update maually)</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_sync_frequency_summary">Sync frequency</string>
    <string name="pref_sync_frequency">Set the sync frequency</string>
</resources>
